--- a/config/control.yaml
+++ b/config/control.yaml
@@ -1,4 +1,4 @@
-chiquinho:
+chiquinho_v2:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
